--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+<!--        <activity-->
+<!--            android:name=".ui.neighbour_list.FavoritesActivity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".ui.neighbour_list.NeighbourDetailsActivity"
             android:exported="true"
-            android:label="@string/title_activity_scrolling"></activity>
-<!--        <activity-->
-<!--            android:name=".ui.neighbour_list.AddToFavoriteActivity"-->
-<!--            android:exported="true" />-->
+            android:label="@string/activity_neighbour_details"
+            android:theme="@style/AppTheme.neighbourDetails" />
         <activity
             android:name=".ui.neighbour_list.AddNeighbourActivity"
             android:label="@string/activity_new_neighbour" />
