--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,16 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+
+
+        testInstrumentationRunnerArguments clearPackageData: 'true'
     }
+
+    testOptions {
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
+        animationsDisabled = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -53,4 +62,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
 
+    androidTestUtil 'androidx.test:orchestrator:1.4.0-rc01'
 }
