refacto test unit avec Truth

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     // UNIT TEST
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.hamcrest:java-hamcrest:2.0.0.0'
+    testImplementation "com.google.truth:truth:1.1.3"
+
 
     // INSTRUMENTATION TEST
     androidTestImplementation 'androidx.test:rules:1.4.0'
